--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 p-4 text-sm">
-  <div class="max-w-md mx-auto bg-white p-4 rounded-xl shadow">
+  <div class="max-w-md md:max-w-lg lg:max-w-2xl mx-auto bg-white p-4 rounded-xl shadow">
     <h1 class="text-lg font-bold mb-4 text-center">トラック積込時間 記録</h1>
 
     <!-- 入力フォーム -->
@@ -22,8 +22,14 @@
 
     <!-- 計測中一覧 -->
     <h2 class="font-semibold mb-2">📋 計測中の車両</h2>
-    <div id="timerList" class="space-y-2">
+    <div id="timerList" class="space-y-2 mb-6">
       <!-- 動的に追加 -->
+    </div>
+
+    <!-- 完了済み一覧 -->
+    <h2 class="font-semibold mb-2">✅ 完了済み記録</h2>
+    <div id="completedList" class="space-y-2 text-gray-700 text-sm">
+      <!-- 完了記録が追加される -->
     </div>
   </div>
 
@@ -32,13 +38,12 @@
       const carNumber = document.getElementById("carNumber").value;
       const company = document.getElementById("company").value;
       const tankNumber = document.getElementById("tankNumber").value;
-
       if (!carNumber || !company || !tankNumber) {
         return alert("すべて入力してください");
       }
 
       const now = new Date();
-      const dateStr = now.toISOString().split("T")[0]; // YYYY-MM-DD
+      const dateStr = now.toISOString().split("T")[0];
 
       const container = document.createElement("div");
       container.className = "bg-gray-50 border p-2 rounded flex justify-between items-center";
@@ -54,13 +59,11 @@
       const stopBtn = document.createElement("button");
       stopBtn.className = "bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600";
       stopBtn.textContent = "終了";
-      stopBtn.onclick = () => container.remove();
 
       container.appendChild(label);
       container.appendChild(stopBtn);
       document.getElementById("timerList").appendChild(container);
 
-      // ストップウォッチ
       let sec = 0;
       const timeEl = label.querySelector("#time");
       const interval = setInterval(() => {
@@ -70,10 +73,23 @@
         timeEl.textContent = `${m}:${s}`;
       }, 1000);
 
-      // 終了で止める
-      stopBtn.addEventListener("click", () => clearInterval(interval));
+      stopBtn.addEventListener("click", () => {
+        clearInterval(interval);
+        container.remove();
 
-      // 初期化
+        // 完了リストに追加
+        const done = document.createElement("div");
+        done.className = "bg-green-100 border border-green-300 p-2 rounded";
+        done.innerHTML = `
+          <div class="font-semibold">${carNumber}</div>
+          <div class="text-xs text-gray-600">${company}（${tankNumber}）</div>
+          <div class="text-xs text-gray-400">📅 ${dateStr}</div>
+          <div class="text-sm text-green-700">経過時間: ${timeEl.textContent}</div>
+        `;
+        document.getElementById("completedList").appendChild(done);
+      });
+
+      // 入力欄リセット
       document.getElementById("carNumber").value = "";
       document.getElementById("company").value = "";
       document.getElementById("tankNumber").value = "";
