--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <div class="max-w-md md:max-w-lg lg:max-w-2xl mx-auto bg-white p-4 rounded-xl shadow">
     <h1 class="text-lg font-bold mb-4 text-center">トラック積込時間 記録</h1>
 
+    <!-- リンクボタン -->
+    <div class="text-right mb-2">
+      <a href="complete.html" class="text-blue-600 underline text-sm">✅ 完了済み一覧を見る</a>
+    </div>
+
     <!-- 入力フォーム -->
     <div class="mb-4 space-y-2">
       <input id="carNumber" class="w-full p-2 border rounded" placeholder="車両番号 (例: 静岡800あ12-34)" />
@@ -77,7 +82,6 @@
         clearInterval(interval);
         container.remove();
 
-        // 完了リストに追加
         const done = document.createElement("div");
         done.className = "bg-green-100 border border-green-300 p-2 rounded";
         done.innerHTML = `
@@ -89,7 +93,6 @@
         document.getElementById("completedList").appendChild(done);
       });
 
-      // 入力欄リセット
       document.getElementById("carNumber").value = "";
       document.getElementById("company").value = "";
       document.getElementById("tankNumber").value = "";
