Update index.html add localStorage save

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- 動的に追加 -->
     </div>
 
-    <!-- 完了済み一覧 -->
+    <!-- 完了済み一覧（即時表示用） -->
     <h2 class="font-semibold mb-2">✅ 完了済み記録</h2>
     <div id="completedList" class="space-y-2 text-gray-700 text-sm">
       <!-- 完了記録が追加される -->
@@ -82,6 +82,15 @@
         clearInterval(interval);
         container.remove();
 
+        const record = {
+          carNumber,
+          company,
+          tankNumber,
+          date: dateStr,
+          duration: timeEl.textContent
+        };
+
+        // 表示用HTML
         const done = document.createElement("div");
         done.className = "bg-green-100 border border-green-300 p-2 rounded";
         done.innerHTML = `
@@ -91,6 +100,11 @@
           <div class="text-sm text-green-700">経過時間: ${timeEl.textContent}</div>
         `;
         document.getElementById("completedList").appendChild(done);
+
+        // localStorageに追加
+        const data = JSON.parse(localStorage.getItem("completedRecords") || "[]");
+        data.push(record);
+        localStorage.setItem("completedRecords", JSON.stringify(data));
       });
 
       document.getElementById("carNumber").value = "";
