--- a/complete.html
+++ b/complete.html
@@ -11,26 +11,30 @@
     <h1 class="text-lg font-bold mb-4 text-center">✅ 完了済み記録 一覧</h1>
 
     <!-- 完了済みリスト -->
-    <div id="completedList" class="space-y-3 text-gray-700">
+    <div id="completedList" class="space-y-3 text-gray-700 mb-4">
       <!-- localStorageから読み込み表示 -->
     </div>
 
-    <div class="text-center mt-6">
+    <div class="text-center space-y-4">
       <a href="index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">← 記録画面へ戻る</a>
+      <button onclick="clearAllCompleted()" class="inline-block bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+        🗑️ 一括削除（管理者向け）
+      </button>
     </div>
   </div>
 
   <script>
-    window.addEventListener("DOMContentLoaded", () => {
+    function loadCompleted() {
       const list = document.getElementById("completedList");
       const records = JSON.parse(localStorage.getItem("completedRecords") || "[]");
 
+      list.innerHTML = "";
       if (records.length === 0) {
         list.innerHTML = '<div class="text-gray-500">完了記録はまだありません。</div>';
         return;
       }
 
-      records.forEach(({ carNumber, company, tankNumber, date, duration }) => {
+      records.forEach(({ carNumber, company, tankNumber, date, duration }, index) => {
         const item = document.createElement("div");
         item.className = "bg-green-100 border border-green-300 p-3 rounded";
         item.innerHTML = `
@@ -38,10 +42,33 @@
           <div class="text-xs text-gray-600">${company}（${tankNumber}）</div>
           <div class="text-xs text-gray-400">📅 ${date}</div>
           <div class="text-sm text-green-700">経過時間: ${duration}</div>
+          <div class="text-right mt-2">
+            <button onclick="deleteRecord(${index})" class="text-red-600 text-xs underline">削除（管理者向け）</button>
+          </div>
         `;
         list.appendChild(item);
       });
-    });
+    }
+
+    function deleteRecord(index) {
+      const records = JSON.parse(localStorage.getItem("completedRecords") || "[]");
+      if (index >= 0 && index < records.length) {
+        if (confirm("この記録を削除しますか？（管理者操作）")) {
+          records.splice(index, 1);
+          localStorage.setItem("completedRecords", JSON.stringify(records));
+          loadCompleted();
+        }
+      }
+    }
+
+    function clearAllCompleted() {
+      if (confirm("完了記録をすべて削除しますか？（管理者操作）")) {
+        localStorage.removeItem("completedRecords");
+        loadCompleted();
+      }
+    }
+
+    window.addEventListener("DOMContentLoaded", loadCompleted);
   </script>
 </body>
 </html>
