--- a/complete.html
+++ b/complete.html
@@ -15,9 +15,9 @@
       <!-- localStorageから読み込み表示 -->
     </div>
 
-    <div class="text-center space-y-4">
-      <a href="index.html" class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">← 記録画面へ戻る</a>
-      <button onclick="clearAllCompleted()" class="inline-block bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+    <div class="flex justify-between items-center mt-6">
+      <a href="index.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">← 記録画面へ戻る</a>
+      <button onclick="clearAllCompleted()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
         🗑️ 一括削除（管理者向け）
       </button>
     </div>
