--- a/complete.html
+++ b/complete.html
@@ -3,72 +3,137 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>完了済み記録一覧</title>
+  <title>完了済み一覧</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 p-4 text-sm">
-  <div class="max-w-md md:max-w-lg lg:max-w-2xl mx-auto bg-white p-4 rounded-xl shadow">
-    <h1 class="text-lg font-bold mb-4 text-center">✅ 完了済み記録 一覧</h1>
+<body class="bg-gray-100 p-6 text-base">
+  <div class="max-w-6xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
+    <h1 class="text-xl font-bold text-center text-blue-800">✅ 完了済み一覧</h1>
 
-    <!-- 完了済みリスト -->
-    <div id="completedList" class="space-y-3 text-gray-700 mb-4">
-      <!-- localStorageから読み込み表示 -->
+    <!-- 検索条件エリア -->
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-3">
+      <input id="searchDate" type="date" class="p-2 border rounded w-full" placeholder="日付で絞り込み" />
+      <input id="searchCar" type="text" class="p-2 border rounded w-full" placeholder="車両番号で検索" />
+      <input id="searchCompany" type="text" class="p-2 border rounded w-full" placeholder="運送会社で検索" />
+      <input id="searchTank" type="text" class="p-2 border rounded w-full" placeholder="タンクNoで検索" />
+    </div>
+    <div class="text-right mb-4">
+      <button onclick="filterRecords()" class="inline-flex items-center gap-2 bg-gradient-to-r from-blue-500 to-blue-600 text-white font-semibold py-2 px-5 rounded-full shadow hover:from-blue-600 hover:to-blue-700 transition">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16l-4-4m0 0l4-4m-4 4h16" /></svg>
+        検索する
+      </button>
     </div>
 
-    <div class="flex justify-between items-center mt-6">
-      <a href="index.html" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">← 記録画面へ戻る</a>
-      <button onclick="clearAllCompleted()" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
-        🗑️ 一括削除（管理者向け）
-      </button>
+    <!-- 一覧テーブル -->
+    <div class="overflow-x-auto">
+      <table class="min-w-full table-auto border text-sm">
+        <thead>
+          <tr class="bg-gray-200 text-left">
+            <th class="p-2 border cursor-pointer" onclick="sortTable('date')">日付</th>
+            <th class="p-2 border cursor-pointer" onclick="sortTable('carNumber')">車両番号</th>
+            <th class="p-2 border cursor-pointer" onclick="sortTable('company')">運送会社</th>
+            <th class="p-2 border cursor-pointer" onclick="sortTable('tankNumber')">タンクNo.</th>
+            <th class="p-2 border cursor-pointer" onclick="sortTable('duration')">経過時間</th>
+            <th class="p-2 border">備考</th>
+          </tr>
+        </thead>
+        <tbody id="recordTable">
+          <!-- 動的に挿入 -->
+        </tbody>
+      </table>
+    </div>
+
+    <!-- 戻るリンク -->
+    <div class="mt-6 text-center">
+      <a href="index.html" class="text-blue-600 underline">← 記録画面に戻る</a>
     </div>
   </div>
 
   <script>
-    function loadCompleted() {
-      const list = document.getElementById("completedList");
-      const records = JSON.parse(localStorage.getItem("completedRecords") || "[]");
+    let currentSortKey = null;
+    let currentSortAsc = true;
 
-      list.innerHTML = "";
-      if (records.length === 0) {
-        list.innerHTML = '<div class="text-gray-500">完了記録はまだありません。</div>';
-        return;
+    function loadRecords() {
+      let records = JSON.parse(localStorage.getItem("completedRecords") || "null");
+      if (!records) {
+        records = [
+          { date: "2025-07-22", carNumber: "静岡800あ12-34", company: "港運輸", tankNumber: "T-3", duration: "02:14", remarks: "朝一番の便" },
+          { date: "2025-07-21", carNumber: "浜松300い56-78", company: "清水急送", tankNumber: "T-5", duration: "03:09", remarks: "積載多め" },
+          { date: "2025-07-20", carNumber: "富士100う11-22", company: "甲府物流", tankNumber: "T-1", duration: "02:45", remarks: "" }
+        ];
+        localStorage.setItem("completedRecords", JSON.stringify(records));
       }
+      return records;
+    }
 
-      records.forEach(({ carNumber, company, tankNumber, date, duration }, index) => {
-        const item = document.createElement("div");
-        item.className = "bg-green-100 border border-green-300 p-3 rounded";
-        item.innerHTML = `
-          <div class="font-semibold">${carNumber}</div>
-          <div class="text-xs text-gray-600">${company}（${tankNumber}）</div>
-          <div class="text-xs text-gray-400">📅 ${date}</div>
-          <div class="text-sm text-green-700">経過時間: ${duration}</div>
-          <div class="text-right mt-2">
-            <button onclick="deleteRecord(${index})" class="text-red-600 text-xs underline">削除（管理者向け）</button>
-          </div>
+    function displayRecords(records) {
+      const tbody = document.getElementById("recordTable");
+      tbody.innerHTML = "";
+
+      records.forEach(record => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td class="p-2 border">${record.date}</td>
+          <td class="p-2 border">${record.carNumber}</td>
+          <td class="p-2 border">${record.company || ''}</td>
+          <td class="p-2 border">${record.tankNumber || ''}</td>
+          <td class="p-2 border">${record.duration}</td>
+          <td class="p-2 border">${record.remarks || ''}</td>
         `;
-        list.appendChild(item);
+        tbody.appendChild(row);
       });
     }
 
-    function deleteRecord(index) {
-      const records = JSON.parse(localStorage.getItem("completedRecords") || "[]");
-      if (index >= 0 && index < records.length) {
-        if (confirm("この記録を削除しますか？（管理者操作）")) {
-          records.splice(index, 1);
-          localStorage.setItem("completedRecords", JSON.stringify(records));
-          loadCompleted();
+    function filterRecords() {
+      const date = document.getElementById("searchDate").value;
+      const car = document.getElementById("searchCar").value.trim();
+      const company = document.getElementById("searchCompany").value.trim();
+      const tank = document.getElementById("searchTank").value.trim();
+
+      let records = loadRecords();
+      records = records.filter(r => {
+        return (!date || r.date === date)
+          && (!car || r.carNumber.includes(car))
+          && (!company || (r.company || '').includes(company))
+          && (!tank || (r.tankNumber || '').includes(tank));
+      });
+      if (currentSortKey) {
+        records.sort(sortByKey(currentSortKey, currentSortAsc));
+      }
+      displayRecords(records);
+    }
+
+    function sortTable(key) {
+      if (currentSortKey === key) {
+        currentSortAsc = !currentSortAsc;
+      } else {
+        currentSortKey = key;
+        currentSortAsc = true;
+      }
+      filterRecords();
+    }
+
+    function sortByKey(key, asc = true) {
+      return function(a, b) {
+        let valA = a[key] || '';
+        let valB = b[key] || '';
+
+        if (key === 'duration') {
+          const toSec = str => {
+            const [h, m] = str.split(":").map(Number);
+            return h * 60 + m;
+          };
+          valA = toSec(valA);
+          valB = toSec(valB);
         }
-      }
+
+        if (valA < valB) return asc ? -1 : 1;
+        if (valA > valB) return asc ? 1 : -1;
+        return 0;
+      };
     }
 
-    function clearAllCompleted() {
-      if (confirm("完了記録をすべて削除しますか？（管理者操作）")) {
-        localStorage.removeItem("completedRecords");
-        loadCompleted();
-      }
-    }
-
-    window.addEventListener("DOMContentLoaded", loadCompleted);
+    window.onload = () => filterRecords();
   </script>
 </body>
 </html>
