--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <div class="max-w-2xl mx-auto bg-white p-6 rounded-xl shadow space-y-6">
     <h1 class="text-2xl font-bold text-center text-blue-800">トラック積込時間 記録</h1>
 
+    <!-- 説明エリア -->
+    <div class="bg-blue-50 border border-blue-200 p-4 rounded-lg text-sm text-gray-700">
+      <p class="mb-1 font-semibold">📘 使い方ガイド：</p>
+      <ul class="list-disc pl-5 space-y-1">
+        <li>車両が到着したら <strong>車両番号（必須）</strong> を入力し、必要に応じて運送会社・タンクNo・備考も入力してください。</li>
+        <li><strong>「▶ 計測スタート」ボタン</strong>を押すと、タイマーが開始されます。</li>
+        <li>積み込み作業が完了したら、<strong>「⏹ 終了」ボタン</strong>を押して終了時間を記録してください。</li>
+        <li>記録されたデータは完了一覧画面から確認・出力できます。</li>
+      </ul>
+    </div>
+
     <!-- リンクボタン -->
     <div class="text-right">
       <a href="complete.html" class="text-blue-600 underline text-lg">✅ 完了済み一覧を見る</a>
